Restart haproxy after config update

--- a/examples/resources/templates/haproxy.cfg.j2
+++ b/examples/resources/templates/haproxy.cfg.j2
@@ -1,6 +1,6 @@
 global
     maxconn 4096
-    pidfile /var/run/haproxy.pidfile
+    pidfile /var/run/haproxy.pid
 defaults
     mode tcp
     timeout connect 5s
