Added riak storage_backend as input (also riak.conf is jinja processed now)

--- a/resources/riak_node/templates/riak.conf.jinja
+++ b/resources/riak_node/templates/riak.conf.jinja
@@ -331,7 +331,7 @@ anti_entropy = active
 ## 
 ## Acceptable values:
 ##   - one of: bitcask, leveldb, memory, multi
-storage_backend = bitcask
+storage_backend = {{storage_backend}}
 
 ## Controls which binary representation of a riak value is stored
 ## on disk.
