Get partitioning information from bareon-api

--- a/resources/not_provisioned_node/templates/provisioning.json.jinja
+++ b/resources/not_provisioned_node/templates/provisioning.json.jinja
@@ -1,4 +1,5 @@
 {
+    "partitioning": {{ partitioning | to_pretty_json }},
     "profile": "ubuntu_1404_x86_64",
     "name_servers_search": "\"example.com\"",
     "uid": "2",
