Building IBP images on solar 'master' instead of downloading them

--- a/resources/not_provisioned_node/templates/provisioning.json.jinja
+++ b/resources/not_provisioned_node/templates/provisioning.json.jinja
@@ -9,8 +9,8 @@
             "mac_address": "08:00:27:6e:6d:b4"
         },
         "eth0": {
-            "ip_address": "10.0.2.15",
-            "dns_name": "node-8.test.domain.local",
+            "ip_address": "{{ ip }}",
+            "dns_name": "{{ name }}.test.domain.local",
             "netmask": "255.255.255.0",
             "static": "0",
             "mac_address": "08:00:27:ea:35:e7"
@@ -119,7 +119,7 @@
                 "remote_relative": "dists/trusty/main/installer-amd64/current/images/netboot/ubuntu-installer/amd64/initrd.gz"
             }
         },
-        "authorized_keys": [],
+        "authorized_keys": ["{{ master_key }}"],
         "mlnx_iser_enabled": false,
         "mco_pskey": "Gie6iega9ohngaenahthohngu8aebohxah9seidi",
         "mco_user": "guest",
@@ -129,12 +129,12 @@
         "image_data": {
             "/boot": {
                 "container": "gzip",
-                "uri": "http://10.0.0.2:8001/tmp/targetimages/env_3_ubuntu_1404_amd64-boot.img.gz",
+                "uri": "http://10.0.0.2:8001/tmp/targetimages/env_1_ubuntu_1404_amd64-boot.img.gz",
                 "format": "ext2"
             },
             "/": {
                 "container": "gzip",
-                "uri": "http://10.0.0.2:8001/tmp/targetimages/env_3_ubuntu_1404_amd64.img.gz",
+                "uri": "http://10.0.0.2:8001/tmp/targetimages/env_1_ubuntu_1404_amd64.img.gz",
                 "format": "ext4"
             }
         },
@@ -213,9 +213,9 @@
         "admin_net": "10.20.0.0/24",
         "mco_host": "localhost"
     },
-    "name": "node-2",
-    "hostname": "node-2.example.com",
-    "slave_name": "node-2",
+    "name": "{{ name }}",
+    "hostname": "{{ name }}.example.com",
+    "slave_name": "{{ name }}",
     "power_pass": "/root/.ssh/bootstrap.rsa",
     "netboot_enabled": "1"
 }
